[package]
name = "mtrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.8" }
polyline = "0.10.1"
geo-types = "0.7.12"
octets = "0.2.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
serde_json = "1.0.111"
